ecmascript/parser/tests/typescript-errors/tsc/types/tuple/restTupleElements1/input.ts.stderr
error: A required element cannot follow an optional element.
 --> $DIR/tests/typescript-errors/tsc/types/tuple/restTupleElements1/input.ts:6:12
  |
6 | type T02 = [string?, string];  // Error
  |            ^^^^^^^^^^^^^^^^^

